--- a/llista-tasques/src/App.css
+++ b/llista-tasques/src/App.css
@@ -1,42 +1,75 @@
+:root {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 #root {
-  max-width: 1280px;
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.llistaTascas {
+  width: 70vw;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formComp {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.formInput {
+  width: 20vw;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px 0px 0px 5px;
 }
 
-.card {
-  padding: 2em;
+button {
+  padding: 11px;
+  background-color: #2871c4;
+  color: white;
+  border: none;
+  border-radius: 0px 5px 5px 0px;
+  cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+button:hover {
+  background-color: #0c4485;
+}
+
+.tascaCompletada {
+  text-decoration: line-through;
+}
+
+.tascaComp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+}
+
+.tascaComponents {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 25.5vw;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #f3eef8bd;
+}
+
+.btnIcon {
+  margin-left: auto;
+  cursor: pointer;
 }
