--- a/llista-tasques/src/App.css
+++ b/llista-tasques/src/App.css
@@ -27,6 +27,7 @@ h2 {
   padding: 2em;
   border-radius: 1em;
   background-color: #d1dfd3bb;
+  box-shadow: 0px 0px 16px rgba(17,17,26,0.1);
 }
 
 .formComp {
@@ -36,12 +37,13 @@ h2 {
   margin-bottom: 20px;
 }
 
-.formInput {
+.customTextField {
   width: 30vw;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 25px;
   border: none;
+  font-family: 'Space Mono', monospace;
 }
 
 .tascaCompletada {
@@ -53,6 +55,7 @@ h2 {
   flex-direction: column;
   align-items: center;
   gap: 1em;
+  cursor: pointer;
 }
 
 span {
@@ -63,9 +66,11 @@ span {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 33vw;
+  align-items: center;
+  width: 29vw;
+  height: 5vh;
   padding: 10px;
-  border-radius: 25px;
+  border-radius: 5px;
   background-color: #cfa1fdbd;
 }
 
