--- a/movies_db/src/App.css
+++ b/movies_db/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * { 
   font-family: 'Space Mono', monospace;
@@ -16,4 +16,4 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
