--- a/movies_db/src/App.css
+++ b/movies_db/src/App.css
@@ -9,11 +9,23 @@
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizelegibility;
   letter-spacing: -0.25px;
-}
+} */
 
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-} */
+}
+
+.moviesListComp {  
+  width: 100%;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2em;
+  border: 2px dotted green;
+}
+
+.cards {
+  padding: 1em;
+  border: 1px solid blue;
+}
