--- a/movies_db/src/App.css
+++ b/movies_db/src/App.css
@@ -1,3 +1,7 @@
+* {
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 #root {
   display: flex;
   flex-direction: column;
