--- a/movies_db/src/App.css
+++ b/movies_db/src/App.css
@@ -1,25 +1,38 @@
 * {
+  margin: 0;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 #root {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  padding: 2rem;
+}
+
+.nav {
+  margin-bottom: 1em;
 }
 
 h1, h2 {
   text-align: center;
+  padding: .5em;
   color: rgb(255, 255, 255);
 }
 
+h3 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .addTitle {
-  color: rgb(143, 143, 245);
+  color: rgb(230, 215, 215);
 }
 
 label {
   color: palevioletred
+}
+
+h4 {
+  margin-top: 2em;
 }
 
 input, textarea {
@@ -33,19 +46,107 @@ input, textarea {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1em 1em;
-  padding: 1em;
+  gap: 1px;
 }
 
-/* .cards {
-  padding: 1em;
-} */
+.movie-card {
+  position: relative;
+  width: 300px;
+  margin: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(221, 221, 221, 0.2);
+}
 
-.typography-title {
-  white-space: nowrap;
+.movie-card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.movie-card-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  box-sizing: border-box;
+}
+
+.movie-card-header {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.rate {
+  display: flex;
+  flex-direction: row;
+  gap: 2px;
+  margin-top: 2px;
+}
+
+.rate-star {
+  margin-top: 2px;
+}
+
+.icon-info {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin: 0 19px;
+}
+
+.movie-title {
+  margin: 0 9px 12px;
+  font-size: 1.5em;
+}
+
+.movie-icons {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.movie-icons .icon {
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.movie-icons .icon:hover {
+  color: rgb(245, 19, 19);
+  cursor: pointer;
+}
+
+.movie-director {
+  margin: 20px 0 0 0;
+}
+
+.movie-description {
+  margin: 0;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 100%; 
+}
+
+.desc-heart {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.movie-card-body {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1px;
 }
 
 .select {
@@ -105,7 +206,7 @@ input, textarea {
 .moviesAddComp button {
   width: 50%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #6a64fb;
   color: white;
   border: none;
   border-radius: .5em;
@@ -114,7 +215,7 @@ input, textarea {
 }
 
 .moviesAddComp button:hover {
-  background-color: #0056b3;
+  background-color:#524cf4;
 }
 
 @media screen and (max-width: 640px) {
