--- a/tetris/src/components/Tetris.css
+++ b/tetris/src/components/Tetris.css
@@ -1,6 +1,16 @@
+body {
+   padding: 0;
+   margin: 0;
+   background-color: #c3c3c3bc;
+}
+
+.tetris {
+    display: flex;
+    justify-content: center;
+}
+
 .board {
-    background-color: #444444cf;
-    width: 300px;
+    border: 1px solid black;
 }
 
 .row { 
@@ -9,6 +19,38 @@
 }
 
 .cell {
-    border: 1px solid #222;
+    border: 2px inset #cdcdcd;
     padding: 14px;
+}
+
+.score {
+    border: 1px solid green;
+    width: 10vw;
+}
+
+
+@media (max-width: 600px) {
+    * {
+        --black: #1e1e1e;
+        --white: #ffffff;
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+    }
+
+    .tetris {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .score {
+        width: 316px;
+        height: 5vh;
+    }
 }
