--- a/tetris/src/index.css
+++ b/tetris/src/index.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -8,16 +8,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 h1 {
-  font-size: 3.2em;
+  font-size: 3em;
   line-height: 1.1;
-} */
+  margin: .5em;
+  text-align: center;
+}
